--- a/app/views/login.html
+++ b/app/views/login.html
@@ -3,6 +3,7 @@
 <style>
     body {
         background-color:brown !important;
+        overflow:hidden;
     }
 
 
@@ -10,14 +11,395 @@
 
         color:#fff;
     }
+
+    .cat p {
+
+ background-color:#000;
+ color:#fff;
+        width:100%;
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";       /* IE 8 */
+filter: alpha(opacity=50);  /* IE 5-7 */
+-moz-opacity: 0.5;          /* Netscape */
+-khtml-opacity: 0.5;        /* Safari 1.x */
+opacity: 0.5; 
+padding:3px;
+font-family:Verdana;
+
+    }
 </style>
 
 <div style="text-align:center;">
     <h1>Radhe</h1>
-    <h2>Radhe</h2>
-    <h3>Radhe</h3>
-    <h4>Radhe</h4>
-     <h5>Radhe</h5>
+ 
+</div>
+<br />
+<br />
+
+<div class="row cat">
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Taxi</p>
+        </div>
+    </div>
+   <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Restaurants</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/23.jpg" alt="Alternate Text" />
+            <p>Furniture</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/24.jpg" alt="Alternate Text" />
+            <p>School</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Colleges</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/23.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/23.jpg" alt="Alternate Text" />
+            <p>Taxi</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/24.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>School</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Computer</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/24.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+     <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Taxi</p>
+        </div>
+    </div>
+   <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Restaurants</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/23.jpg" alt="Alternate Text" />
+            <p>Furniture</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/24.jpg" alt="Alternate Text" />
+            <p>School</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Colleges</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/23.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/23.jpg" alt="Alternate Text" />
+            <p>Taxi</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/24.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>School</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Computer</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/24.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    
+     <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Taxi</p>
+        </div>
+    </div>
+   <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Restaurants</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/23.jpg" alt="Alternate Text" />
+            <p>Furniture</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/24.jpg" alt="Alternate Text" />
+            <p>School</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Colleges</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/23.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/23.jpg" alt="Alternate Text" />
+            <p>Taxi</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/24.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>School</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Computer</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/24.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    
+     <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Taxi</p>
+        </div>
+    </div>
+   <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Restaurants</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/23.jpg" alt="Alternate Text" />
+            <p>Furniture</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/24.jpg" alt="Alternate Text" />
+            <p>School</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Colleges</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/23.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/23.jpg" alt="Alternate Text" />
+            <p>Taxi</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/24.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>School</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Computer</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/24.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    
+    
 </div>
 
 
