--- a/app/views/login.html
+++ b/app/views/login.html
@@ -3,7 +3,7 @@
 <style>
     body {
         background-color:brown !important;
-        overflow:hidden;
+        overflow-x:hidden !important;
     }
 
 
@@ -14,29 +14,189 @@
 
     .cat p {
 
- background-color:#000;
- color:#fff;
-        width:100%;
-        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";       /* IE 8 */
-filter: alpha(opacity=50);  /* IE 5-7 */
--moz-opacity: 0.5;          /* Netscape */
--khtml-opacity: 0.5;        /* Safari 1.x */
-opacity: 0.5; 
-padding:3px;
-font-family:Verdana;
+ background-color: #000;
+    color: #fff;
+    width: 100%;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+    filter: alpha(opacity=50);
+    -moz-opacity: 0.5;
+    -khtml-opacity: 0.5;
+    opacity: 0.8;
+    padding: 3px;
+    position: relative;
+    font-family: Verdana;
+    margin-top: -29px;
 
+    }
+
+    .col-md-2 {
+        padding-left:3px;
+        padding-right:3px;
     }
 </style>
 
-<div style="text-align:center;">
-    <h1>Radhe</h1>
- 
-</div>
+
 <br />
-<br />
+
 
 <div class="row cat">
     <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Taxi</p>
+        </div>
+    </div>
+   <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Restaurants</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/23.jpg" alt="Alternate Text" />
+            <p>Furniture</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/24.jpg" alt="Alternate Text" />
+            <p>School</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Colleges</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/23.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/23.jpg" alt="Alternate Text" />
+            <p>Taxi</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/24.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>School</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Computer</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/24.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+     <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Taxi</p>
+        </div>
+    </div>
+   <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Restaurants</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/23.jpg" alt="Alternate Text" />
+            <p>Furniture</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/24.jpg" alt="Alternate Text" />
+            <p>School</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Colleges</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/23.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/22.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/23.jpg" alt="Alternate Text" />
+            <p>Taxi</p>
+        </div>
+    </div>
+    <div class="col-md-2 col-xs-6">
+        <div style="width:100%" >
+            <img style="width:100%;" src="img/24.jpg" alt="Alternate Text" />
+            <p>Hotel</p>
+        </div>
+    </div>
+      <div class="col-md-2 col-xs-6">
         <div style="width:100%" >
             <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
             <p>Taxi</p>
