--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,10 +1,7 @@
 ﻿
 
 <style>
-    body {
-        background-color:brown !important;
-        overflow-x:hidden !important;
-    }
+  
 
 
     h1 {
@@ -14,17 +11,15 @@
 
     .cat p {
 
- background-color: #000;
+background-color: rgba(0,0,0,0.7);
     color: #fff;
     width: 100%;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
     filter: alpha(opacity=50);
-    -moz-opacity: 0.5;
-    -khtml-opacity: 0.5;
-    opacity: 0.8;
+  
     padding: 3px;
     position: relative;
-    font-family: Verdana;
+    font-family: cursive;
     margin-top: -29px;
 
     }
@@ -33,10 +28,108 @@
         padding-left:3px;
         padding-right:3px;
     }
+
+    .swiper-slide {
+
+       height: 150px;
+    font-size: 31px;
+    text-align: center;
+    line-height: 113px;
+    background: red;
+    color: #fff;
+    font-family: cursive;
+    }
+
+  
+
+    .swiper-pagination-bullet {
+    width: 10px;
+    height: 10px;
+    display: inline-block;
+    border-radius: 100%;
+    background: #ccc;
+    opacity: .2;
+}
+
+      .swiper-pagination-bullet-active {
+    opacity: 1;
+    background: #fff;
+}
+
+    .container {
+        width:100%;
+        padding-left:0px;
+        padding-right:0px;
+    }
+
+    .swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction {
+    bottom: 30px;
+    left: 0;
+    width: 100%;
+}
+
+    .categoryhead h5 {
+        font-size:22px;
+        color:#333;
+        line-height:15px;
+            white-space: nowrap
+    }
+
+    .categoryhead .col-xs-4 {
+        text-align:center;
+    }
+
+       .categoryhead i {
+      font-size: 27px;
+   
+    padding-top: 10px;
+    padding-bottom:5px;
+ 
+    }
+
+    .container .row {
+        margin-left:0px;
+        margin-right:0px;
+    }
+
+   
 </style>
 
 
-<br />
+
+
+
+
+<div class="swiper-container">
+<div class="swiper-wrapper">
+    <div class="swiper-slide red">Entertainment</div>
+<div class="swiper-slide purple">Restaurants</div>
+
+<div class="swiper-slide green">Auto <small>Mobiles</small> </div>
+<div class="swiper-slide blue">Contractors</div>
+
+</div>
+ 
+<div class="swiper-pagination"></div>
+</div>
+
+<div class="categoryhead">
+    <div class="row">
+    <div style="text-align:left; padding-left:3px;" class="col-xs-4">
+        <h5>NM</h5>
+    </div>
+      <div class="col-xs-4">
+          <h5>Looks for</h5>
+      </div>
+      <div style="padding-right:3px;" class="col-xs-4">
+          <div class="pull-right">
+              <i style="margin-right:10px;" class="fa fa-th-list"></i>
+                <i class="fa fa-th"></i>
+          </div>
+      </div>
+        </div>
+</div>
+ 
 
 
 <div class="row cat">
@@ -48,7 +141,7 @@
     </div>
    <div class="col-md-2 col-xs-6">
         <div style="width:100%" >
-            <img style="width:100%;" src="img/21.jpg" alt="Alternate Text" />
+            <img style="width:100%;" src="img/24.jpg" alt="Alternate Text" />
             <p>Hotel</p>
         </div>
     </div>
