--- a/css/style.css
+++ b/css/style.css
@@ -611,6 +611,7 @@ footer.page-footer {
     z-index:1000;
     top: 0;
     left: 0;
+    background:#fff;
     right: 0;
 }
 #toolbar.transparent {
@@ -638,9 +639,9 @@ footer.page-footer {
     position: relative;
 }
 #toolbar i {
-    font-size: 24px;
+    font-size: 27px;
     line-height: 56px;
-    color: #fff;
+    color: #333;
 }
 #toolbar .title {
     font-size: 17px;
