--- a/app/views/login.html
+++ b/app/views/login.html
@@ -70,8 +70,8 @@ background-color: rgba(0,0,0,0.7);
 
     .categoryhead h5 {
         font-size:22px;
-        color:#333;
-        line-height:15px;
+        color:#6d6b6b;
+        line-height:19px;
             white-space: nowrap
     }
 
@@ -81,7 +81,7 @@ background-color: rgba(0,0,0,0.7);
 
        .categoryhead i {
       font-size: 27px;
-   
+   color:#6d6b6b;
     padding-top: 10px;
     padding-bottom:5px;
  
