--- a/app/views/login.html
+++ b/app/views/login.html
@@ -119,6 +119,7 @@ background-color: rgba(0,0,0,0.7);
 
     .input-group-addon, .input-group-btn {
         width:auto;
+        background:transparent;
     }
 
 
@@ -179,8 +180,16 @@ background-color: rgba(0,0,0,0.7);
         border-radius:7px;
     }
 
+    .listtable h3 {
+          font-family: cursive;
+    }
+
     .listtable h5 {
         color:#989393;
+    }
+
+    .mytextbox:focus {
+    box-shadow:none !important;
     }
 </style>
 
@@ -774,7 +783,7 @@ background-color: rgba(0,0,0,0.7);
                   <img style="width:75px; height:75px;" src="img/22.jpg" alt="Alternate Text" />
             </td>
              <td>
-                 <h3 style="margin-bottom:5px; margin-top:1px">HOTEL</h3>
+                 <h3 style="margin-bottom:5px; margin-top:1px">Hotel</h3>
                  <h5>Category description here !!</h5>
              </td>
         </tr>
@@ -811,7 +820,7 @@ background-color: rgba(0,0,0,0.7);
                   <img style="width:75px; height:75px;" src="img/22.jpg" alt="Alternate Text" />
             </td>
              <td>
-                 <h3 style="margin-bottom:5px; margin-top:1px">HOTEL</h3>
+                 <h3 style="margin-bottom:5px; margin-top:1px">Hotel</h3>
                  <h5>Category description here !!</h5>
              </td>
         </tr>
@@ -848,7 +857,7 @@ background-color: rgba(0,0,0,0.7);
                   <img style="width:75px; height:75px;" src="img/22.jpg" alt="Alternate Text" />
             </td>
              <td>
-                 <h3 style="margin-bottom:5px; margin-top:1px">HOTEL</h3>
+                 <h3 style="margin-bottom:5px; margin-top:1px">Hotel</h3>
                  <h5>Category description here !!</h5>
              </td>
         </tr>
@@ -885,7 +894,7 @@ background-color: rgba(0,0,0,0.7);
                   <img style="width:75px; height:75px;" src="img/22.jpg" alt="Alternate Text" />
             </td>
              <td>
-                 <h3 style="margin-bottom:5px; margin-top:1px">HOTEL</h3>
+                 <h3 style="margin-bottom:5px; margin-top:1px">Hotel</h3>
                  <h5>Category description here !!</h5>
              </td>
         </tr>
@@ -922,7 +931,7 @@ background-color: rgba(0,0,0,0.7);
                   <img style="width:75px; height:75px;" src="img/22.jpg" alt="Alternate Text" />
             </td>
              <td>
-                 <h3 style="margin-bottom:5px; margin-top:1px">HOTEL</h3>
+                 <h3 style="margin-bottom:5px; margin-top:1px">Hotel</h3>
                  <h5>Category description here !!</h5>
              </td>
         </tr>
@@ -959,7 +968,7 @@ background-color: rgba(0,0,0,0.7);
                   <img style="width:75px; height:75px;" src="img/22.jpg" alt="Alternate Text" />
             </td>
              <td>
-                 <h3 style="margin-bottom:5px; margin-top:1px">HOTEL</h3>
+                 <h3 style="margin-bottom:5px; margin-top:1px">Hotel</h3>
                  <h5>Category description here !!</h5>
              </td>
         </tr>
@@ -996,7 +1005,7 @@ background-color: rgba(0,0,0,0.7);
                   <img style="width:75px; height:75px;" src="img/22.jpg" alt="Alternate Text" />
             </td>
              <td>
-                 <h3 style="margin-bottom:5px; margin-top:1px">HOTEL</h3>
+                 <h3 style="margin-bottom:5px; margin-top:1px">Hotel</h3>
                  <h5>Category description here !!</h5>
              </td>
         </tr>
@@ -1033,7 +1042,7 @@ background-color: rgba(0,0,0,0.7);
                   <img style="width:75px; height:75px;" src="img/22.jpg" alt="Alternate Text" />
             </td>
              <td>
-                 <h3 style="margin-bottom:5px; margin-top:1px">HOTEL</h3>
+                 <h3 style="margin-bottom:5px; margin-top:1px">Hotel</h3>
                  <h5>Category description here !!</h5>
              </td>
         </tr>
@@ -1070,7 +1079,7 @@ background-color: rgba(0,0,0,0.7);
                   <img style="width:75px; height:75px;" src="img/22.jpg" alt="Alternate Text" />
             </td>
              <td>
-                 <h3 style="margin-bottom:5px; margin-top:1px">HOTEL</h3>
+                 <h3 style="margin-bottom:5px; margin-top:1px">Hotel</h3>
                  <h5>Category description here !!</h5>
              </td>
         </tr>
@@ -1107,7 +1116,7 @@ background-color: rgba(0,0,0,0.7);
                   <img style="width:75px; height:75px;" src="img/22.jpg" alt="Alternate Text" />
             </td>
              <td>
-                 <h3 style="margin-bottom:5px; margin-top:1px">HOTEL</h3>
+                 <h3 style="margin-bottom:5px; margin-top:1px">Hotel</h3>
                  <h5>Category description here !!</h5>
              </td>
         </tr>
