--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ a:focus {
     text-decoration: none;
 }
 body,
-input,
+input1,
 textarea,
 button,
 select,
@@ -901,8 +901,8 @@ footer.page-footer {
 }
 /* Searchbar */
 
-.input-field input[type=search] ~ i,
-.input-field input[type=search] ~ i {
+.input1-field input1[type=search] ~ i,
+.input1-field input1[type=search] ~ i {
     position: absolute;
     top: 0;
     right: 1rem;
@@ -911,37 +911,37 @@ footer.page-footer {
     font-size: 2rem;
     transition: .3s color;
 }
-.input-field input[type=search]:focus + label i,
-.input-field input[type=search]:focus ~ i,
-.input-field input[type=search]:focus ~ i {
+.input1-field input1[type=search]:focus + label i,
+.input1-field input1[type=search]:focus ~ i,
+.input1-field input1[type=search]:focus ~ i {
     color: #444;
 }
-/* input */
+/* input1 */
 
-input[type=text]:focus:not([readonly])+label,
-input[type=password]:focus:not([readonly])+label,
-input[type=email]:focus:not([readonly])+label,
-input[type=url]:focus:not([readonly])+label,
-input[type=time]:focus:not([readonly])+label,
-input[type=date]:focus:not([readonly])+label,
-input[type=datetime-local]:focus:not([readonly])+label,
-input[type=tel]:focus:not([readonly])+label,
-input[type=number]:focus:not([readonly])+label,
-input[type=search]:focus:not([readonly])+label,
+input1[type=text]:focus:not([readonly])+label,
+input1[type=password]:focus:not([readonly])+label,
+input1[type=email]:focus:not([readonly])+label,
+input1[type=url]:focus:not([readonly])+label,
+input1[type=time]:focus:not([readonly])+label,
+input1[type=date]:focus:not([readonly])+label,
+input1[type=datetime-local]:focus:not([readonly])+label,
+input1[type=tel]:focus:not([readonly])+label,
+input1[type=number]:focus:not([readonly])+label,
+input1[type=search]:focus:not([readonly])+label,
 textarea.materialize-textarea:focus:not([readonly])+label,
-.input-field .prefix.active {
+.input1-field .prefix.active {
     color: #2196F3;
 }
-input[type=text]:focus:not([readonly]),
-input[type=password]:focus:not([readonly]),
-input[type=email]:focus:not([readonly]),
-input[type=url]:focus:not([readonly]),
-input[type=time]:focus:not([readonly]),
-input[type=date]:focus:not([readonly]),
-input[type=datetime-local]:focus:not([readonly]),
-input[type=tel]:focus:not([readonly]),
-input[type=number]:focus:not([readonly]),
-input[type=search]:focus:not([readonly]),
+input1[type=text]:focus:not([readonly]),
+input1[type=password]:focus:not([readonly]),
+input1[type=email]:focus:not([readonly]),
+input1[type=url]:focus:not([readonly]),
+input1[type=time]:focus:not([readonly]),
+input1[type=date]:focus:not([readonly]),
+input1[type=datetime-local]:focus:not([readonly]),
+input1[type=tel]:focus:not([readonly]),
+input1[type=number]:focus:not([readonly]),
+input1[type=search]:focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
     border-bottom: 1px solid #2196F3;
     box-shadow: 0 1px 0 0 #2196F3;
@@ -1642,10 +1642,10 @@ li.your-comment {
 .checkout-product-title h6 .right {
     font-weight: 400;
 }
-.checkout-header .input-field {
+.checkout-header .input1-field {
     display: flex;
 }
-.checkout-header .discount input {
+.checkout-header .discount input1 {
     flex: 1;
     height: 35px;
 }
@@ -1674,10 +1674,10 @@ li.your-comment {
 .total .right {
     font-weight: 700;
 }
-.form-inputs {
+.form-input1s {
     padding: 10px;
 }
-.form-inputs h4 {
+.form-input1s h4 {
     margin-bottom: 25px;
 }
 .shipping-address {
@@ -1685,7 +1685,7 @@ li.your-comment {
     margin-top: 20px;
     border-top: 1px solid #eee;
 }
-.form-inputs .remember {
+.form-input1s .remember {
     margin: 20px 0;
 }
 /* Grid */
@@ -1712,19 +1712,19 @@ li.your-comment {
 .page-404 i.ion-android-search {
     color: #444;
 }
-.page-404 .input-field input[type=search]:focus,
-.page-404 .input-field input[type=search]:focus,
-.page-404 .input-field input[type=search]:focus {
+.page-404 .input1-field input1[type=search]:focus,
+.page-404 .input1-field input1[type=search]:focus,
+.page-404 .input1-field input1[type=search]:focus {
     -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
-.page-404 nav .input-field label.active i {
+.page-404 nav .input1-field label.active i {
     color: #444;
     opacity: 0.7;
 }
 /* searchbar */
 
-nav .input-field label i {
+nav .input1-field label i {
     color: rgba(0, 0, 0, 0.3);
 }
 /* accordion popout */
@@ -2185,11 +2185,11 @@ ul.faq {
     font-size: 26px;
     top: 3px;
 }
-.todo input[type="checkbox"]:checked + label {
+.todo input1[type="checkbox"]:checked + label {
     text-decoration: line-through;
     color: #9e9e9e;
 }
-.todo input[type="checkbox"] + label {
+.todo input1[type="checkbox"] + label {
     color: inherit;
 }
 .todo .todo-element {
