--- a/app/views/login.html
+++ b/app/views/login.html
@@ -207,6 +207,7 @@ background-color: rgba(0,0,0,0.7);
     padding-top: 4px;
     opacity: 1;
     visibility: hidden;
+    line-height:32px;
 }
 
     .cd-top.cd-is-visible {
