--- a/app/views/login.html
+++ b/app/views/login.html
@@ -243,12 +243,12 @@ background-color: rgba(0,0,0,0.7);
 
 <div class="swiper-container">
 <div class="swiper-wrapper">
-    <div class="swiper-slide red">Entertainment</div>
-<div class="swiper-slide purple">Restaurants</div>
-
+    <div class="swiper-slide indigo">Entertainment</div>
+<div class="swiper-slide pink">Restaurants</div>
+    <div class="swiper-slide purple">Auto <small>Healthcare</small> </div>
 <div class="swiper-slide green">Auto <small>Mobiles</small> </div>
 <div class="swiper-slide blue">Contractors</div>
-    <div class="swiper-slide indigo">Personal care</div>
+    <div class="swiper-slide yellow">Personal care</div>
 
 </div>
  
