--- a/app/views/detail.html
+++ b/app/views/detail.html
@@ -271,9 +271,8 @@
                 visibility: visible;
                
                 text-align: center;
-                color: #fff;
+                color: brown;
                 font-size: 50px;
-                
             
             }
 
@@ -285,16 +284,17 @@
     }
 
 
-    .red {
+    .white {
 
         height:100px; width:100px; text-align:center;line-height:100px; margin:0 auto; border-radius:100%;
       
     }
 
     .well {
-          color:#505050;
+          color:#fff;
           margin-bottom:10px;
     }
+
 
     .center {
 
@@ -304,7 +304,7 @@
 
 
 
-<div style="padding-left:0px; padding-right:0px;" class="well yellow">
+<div style="padding-left:0px; padding-right:0px;" class="well red">
     <div class="row">
         <div class="col-xs-4">
 
@@ -318,7 +318,7 @@
 
         <div style="text-align:center;" class="col-xs-4">
 
-            <div class="red" >
+            <div class="white" >
                 <p class="testp">
                     {{Currentshop.Name}}
                 </p>
