--- a/app/views/about.html
+++ b/app/views/about.html
@@ -26,7 +26,10 @@
     .comments-list li {
     margin-bottom: 25px;
 }
-  
+  .fa-search {
+
+        display:none;
+    }
 </style>
 
 <div class="well">
