--- a/app/views/detail.html
+++ b/app/views/detail.html
@@ -48,8 +48,9 @@
     }
 
     .container {
-        width: 100%;
+        width: 101%;
         padding-left: 0px;
+        margin-left:-1px;
         padding-right: 0px;
     }
 
@@ -385,6 +386,14 @@
                     <td>Email </td>
 
                      <td>  {{Currentshop.Email}}</td>
+
+                  
+                </tr>
+
+                  <tr>
+                    <td>Website </td>
+
+                     <td>  {{Currentshop.WebsiteUrl}}</td>
 
                   
                 </tr>
