--- a/app/views/login.html
+++ b/app/views/login.html
@@ -255,6 +255,19 @@ background-color: rgba(0,0,0,0.7);
 <div class="swiper-pagination"></div>
 </div>
 
+
+<div style="background:#fff;" class="row">
+    <div style="padding-left:0px; padding-right:0px;" class="col-xs-4">
+         <img data-ng-click="darshan()" src="img/sh.jpg" alt="Alternate Text" />
+    </div>
+     <div style="text-align:center; padding:0px" class="col-xs-4">
+           <img  src="img/train.jpg" alt="Alternate Text" />
+     </div>
+     <div style="padding-right:0px; padding-left:0px; text-align:right" class="col-xs-4">
+           <img  src="img/bus.jpg" alt="Alternate Text" />
+     </div>
+</div>
+
 <div class="categoryhead">
     <div class="row">
     <div style="text-align:left; padding-left:5px;" class="col-xs-4">
