--- a/app/views/login.html
+++ b/app/views/login.html
@@ -236,7 +236,7 @@ background-color: rgba(0,0,0,0.7);
 
 
 <div data-ng-if="isload==true || isload=='true'" class="mainloader">
-        <img style="width:35px;" src="img/loader.gif" alt="Alternate Text" />
+        <img style="width:50px; border-radius:100%;" src="img/loader.gif" alt="Alternate Text" />
     </div>
 
 
