--- a/app/views/train.html
+++ b/app/views/train.html
@@ -81,14 +81,35 @@
         padding:2px !important;
         margin-top:-5px;
     }
+
+    .traindata {
+       
+    background: #fff;
+    padding: 5px;
+    border-bottom:1px solid #ccc;
+    }
+
+        .traindata p {
+
+            font-size:13px;
+        }
+
+        .traindata h4 {
+            font-size:16px;
+        }
+    .dropdown-toggle {
+        display:none;
+    }
    
 </style>
+
+  
 <div data-ng-if="isload==true || isload=='true'" class="mainloader">
-        <img style="width:35px;" src="img/loader.gif" alt="Alternate Text" />
+        <img style="width:50px; border-radius:100%" src="img/loader.gif" alt="Alternate Text" />
     </div>
 
 <div>
-    <img style="width:100%; max-height:150px;" src="img/1.jpg" alt="Alternate Text" />
+    <img style="width:100%; max-height:150px;" src="img/2.jpg" alt="Alternate Text" />
 
     <p class="head">Find Your target Location</p>
 </div>
@@ -97,27 +118,35 @@
     
 
     <input style="border-radius:0px;" type="text" data-ng-model="Search" class="form-control" placeholder="Type to search" name="name" value=" " />
-    <table class="table table-bordered">
 
-        <tr>
-            <td class="blue"> BUS </td>
-                 <td class="blue">FROM TO</td>
-       
-             <td class="blue">TIME </td>
-            </tr>
-        <tr data-ng-repeat="obj in BusTimings | filter : Search"">
-            <td  data-ng-class="{'purple': $index % 2 === 0 }" class="pink">
-                <p class="darshan"> {{obj.Name}} </p>
-            </td>
-             <td style="color:#fff;" class="red">
-                 {{obj.From}} to  {{obj.To}}
-             </td>
 
-              <td style="color:#fff;" class="green">
-                 {{obj.BusTime}}
-             </td>
-        </tr>
-    </table>
+    <div class="traindata" data-ng-repeat="obj in TrainTimings | filter : Search"">
+        <h4>{{obj.Name}}</h4>
+        <div class="row">
+
+            <div class="col-xs-6">
+                <p>{{obj.TrainNo}} To {{obj.To}}</p>
+                <p>Train No. {{obj.TrainNo}}</p>
+                  <p>Dept Time. {{obj.DepartureTime}}</p>
+                  <p>Arrival Time. {{obj.ArrivalTime}}</p>
+            </div>
+             <div class="col-xs-6">
+                 <p> AVAILABLE DAYS </p>
+                 <p data-ng-if="obj.IsSunday">Sunday</p>
+                  <p data-ng-if="obj.IsMonday">Monday</p>
+                  <p data-ng-if="obj.IsTueday">Tuesday</p>
+                  <p data-ng-if="obj.IsWednesday">Wednesday</p>
+                  <p data-ng-if="obj.IsThursday">Thursday</p>
+                  <p data-ng-if="obj.IsFriday">Friday</p>
+                  <p data-ng-if="obj.IsSaturday">Saturday</p>
+             </div>
+            
+        </div>
+
+    </div>
+
+
+    
  
    
     
