--- a/app/views/train.html
+++ b/app/views/train.html
@@ -125,7 +125,7 @@
         <div class="row">
 
             <div class="col-xs-6">
-                <p>{{obj.TrainNo}} To {{obj.To}}</p>
+                <p>{{obj.From}} To {{obj.To}}</p>
                 <p>Train No. {{obj.TrainNo}}</p>
                   <p>Dept Time. {{obj.DepartureTime}}</p>
                   <p>Arrival Time. {{obj.ArrivalTime}}</p>
